<resources>
    <string name="app_name">Logica App</string>
    <string name="tv_conjunction_text">Conjunction (AND)</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_t">T</string>
    <string name="letter_f">F</string>
    <string name="btn_confirm_text">CONFIRM</string>
    <string name="a_and_b_text">A ^ B</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="please_fill_in">Please fill in each input</string>
    <string name="et_desc_text">Fill in either T or F</string>
</resources>
