<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaAPppActivity">

    <TextView
        android:id="@+id/tv_h1"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_conjunction_text"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_r1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/letter_a"
        app:layout_constraintEnd_toStartOf="@+id/tv_r1_2"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_r1_2" />

    <TextView
        android:id="@+id/tv_r1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/letter_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_h1" />

    <TextView
        android:id="@+id/tv_r1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/a_and_b_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toEndOf="@+id/tv_r1_2"
        app:layout_constraintTop_toTopOf="@+id/tv_r1_2" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_h1"
        app:layout_constraintVertical_bias="0.99" />

    <TextView
        android:id="@+id/tv_r2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_t"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r2_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_r2_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_r1_1"
        app:layout_constraintTop_toTopOf="@+id/tv_r2_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_r2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/letter_t"
        app:layout_constraintEnd_toEndOf="@+id/tv_r1_2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/tv_r1_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_r1_2" />

    <EditText
        android:id="@+id/et_r2_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:digits="TF"
        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:contentDescription="@string/et_descr_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r2_2"
        app:layout_constraintEnd_toEndOf="@+id/tv_r1_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_r2_2"
        app:layout_constraintTop_toTopOf="@+id/tv_r2_2"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/tv_r3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_t"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r3_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_r3_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_r2_1"
        app:layout_constraintTop_toTopOf="@+id/tv_r3_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_r3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/letter_f"
        app:layout_constraintEnd_toEndOf="@+id/tv_r2_2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/tv_r2_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_r2_2" />

    <EditText
        android:id="@+id/et_r3_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="TF"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:contentDescription="@string/et_descr_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r3_2"
        app:layout_constraintEnd_toEndOf="@+id/et_r2_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_r3_2"
        app:layout_constraintTop_toTopOf="@+id/tv_r3_2"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/tv_r4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_f"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r4_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_r4_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_r3_1"
        app:layout_constraintTop_toTopOf="@+id/tv_r4_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_r4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/letter_t"
        app:layout_constraintEnd_toEndOf="@+id/tv_r3_2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/tv_r3_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_r3_2" />

    <EditText
        android:id="@+id/et_r4_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="TF"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:contentDescription="@string/et_descr_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r4_2"
        app:layout_constraintEnd_toEndOf="@+id/et_r3_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_r4_2"
        app:layout_constraintTop_toTopOf="@+id/tv_r4_2"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/tv_r5_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_f"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r5_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_r5_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_r4_1"
        app:layout_constraintTop_toTopOf="@+id/tv_r5_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_r5_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/letter_f"
        app:layout_constraintEnd_toEndOf="@+id/tv_r4_2"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/tv_r4_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_r4_2" />

    <EditText
        android:id="@+id/et_r5_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="TF"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:contentDescription="@string/et_descr_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r5_2"
        app:layout_constraintEnd_toEndOf="@+id/et_r4_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_r5_2"
        app:layout_constraintTop_toTopOf="@+id/tv_r5_2"
        app:layout_constraintVertical_bias="0.346" />

</androidx.constraintlayout.widget.ConstraintLayout>